--- a/lab2_2/app/src/main/res/layout/activity_main.xml
+++ b/lab2_2/app/src/main/res/layout/activity_main.xml
@@ -23,28 +23,28 @@
             android:id="@+id/button_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="+"
+            android:text="@string/add"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <Button
             android:id="@+id/button_sub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="-"
+            android:text="@string/sub"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <Button
             android:id="@+id/button_mul"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="*"
+            android:text="@string/mul"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <Button
             android:id="@+id/button_div"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="/"
+            android:text="@string/div"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
@@ -91,7 +91,7 @@
         android:ems="2"
         android:gravity="center"
         android:inputType="numberSigned"
-        android:text="10"
+        android:text="0"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linearLayout5"
