--- a/lab2_2/app/src/main/res/layout/activity_settings.xml
+++ b/lab2_2/app/src/main/res/layout/activity_settings.xml
@@ -10,21 +10,22 @@
         android:id="@+id/bgColor"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="160dp"
         android:onClick="onClickButton"
         android:text="@string/backColor"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.25" />
 
     <Button
         android:id="@+id/statusBarColor"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
         android:onClick="onClickButton"
         android:text="@string/statusBarColor"
+        app:layout_constraintBottom_toTopOf="@+id/actionBarColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,9 +35,10 @@
         android:id="@+id/actionBarColor"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginBottom="32dp"
         android:onClick="onClickButton"
         android:text="@string/actionBarColor"
+        app:layout_constraintBottom_toTopOf="@+id/apply"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,11 +48,12 @@
         android:id="@+id/apply"
         android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="200dp"
         android:onClick="onClickButton"
         android:text="@string/apply"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.7" />
 </androidx.constraintlayout.widget.ConstraintLayout>
