before deleting tablerows

--- a/lab7/app/src/main/res/layout-land/activity_main.xml
+++ b/lab7/app/src/main/res/layout-land/activity_main.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -38,34 +37,25 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
-            android:id="@+id/tr1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
 
             <EditText
-                android:id="@+id/editTextNumberSigned"
                 style="@style/DefaultEditTextCell"
                 tools:text="54678" />
 
-            <EditText
-                android:id="@+id/editTextNumberSigned2"
-                style="@style/DefaultEditTextCell" />
+            <EditText style="@style/DefaultEditTextCell" />
         </TableRow>
 
         <TableRow
-            android:id="@+id/tr2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <EditText
-                android:id="@+id/editTextNumberSigned3"
-                style="@style/DefaultEditTextCell" />
+            <EditText style="@style/DefaultEditTextCell" />
 
-            <EditText
-                android:id="@+id/editTextNumberSigned4"
-                style="@style/DefaultEditTextCell" />
+            <EditText style="@style/DefaultEditTextCell" />
 
         </TableRow>
 
@@ -102,7 +92,6 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
