--- a/lab9/app/src/main/res/values/colors.xml
+++ b/lab9/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="gradient2">#b92b27</color>
     <color name="gradient1">#052951</color>
+    <color name="ground">#332926</color>
 </resources>
