--- a/lab9/app/src/main/res/layout/activity_main.xml
+++ b/lab9/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         android:id="@+id/spaceship"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="1dp"
         android:scaleX="0.5"
         android:scaleY="0.5"
         android:src="@drawable/build"
